[B]Retrospect v5.7.xx - Changelog - 2024-xx-xx[/B]

t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: NPO 'Recent' items broke if there were too many season results (Fixes #1871).